# local-services

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
admin/: .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
admin/e2e/: auth.spec.ts  bookings.spec.ts  categories.spec.ts  dashboard.spec.ts  global-setup.ts  masters.spec.ts  navigation.spec.ts  reviews.spec.ts  sections.spec.ts  transactions.spec.ts  (+1 more)
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/: admin.py  auth.py  bookings.py  categories.py  chat.py  masters.py  notifications.py  payments.py  reviews.py  slots.py  upload.py  webhooks.py
backend/app/core/: config.py  database.py  deps.py  limiter.py  security.py
backend/app/models/: __init__.py  base.py  booking.py  category.py  chat.py  master.py  notification.py  payment.py  portfolio.py  refresh_token.py  review.py  service.py  time_slot.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  booking.py  chat.py  master.py  notification.py  payment.py  review.py
backend/app/services/: auth_service.py  booking_service.py  file_service.py  master_service.py  notification_service.py  payment_service.py
backend/app/ws/: chat.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_health.py  test_masters.py
mobile/: README.md  pubspec.yaml
nginx/: nginx.conf
(+96 files in other folders)
